Mobile: Forward/rewind buttons - fixing alignment

--- a/skin/sass/skin.sass
+++ b/skin/sass/skin.sass
@@ -193,14 +193,14 @@
     font-weight: bold
     text-shadow: 0 0 10px rgba(#000, 0.3)
     opacity: 0 !important
-    transform: scale(.8)
+    transform: scale(0.80)
     transition: all .2s
     width: 4em
     height: 2em
     display: none
     &.fp-hilite
       opacity: 1 !important
-      transform: scale(1)
+      transform: scale(1.00)
 
   // the big play button on center
   .fp-play, .fp-pause, .fp-waiting, .fp-forward, .fp-rewind
@@ -218,7 +218,7 @@
       opacity: 0
       margin: auto
       max-height: 30%
-      transform: scale(.8)
+      transform: scale(0.80)
       transition: all .2s
       display: none
       &.fp-play-rounded-fill, &.fp-pause-rounded-fill
@@ -226,7 +226,7 @@
 
     &.fp-visible
       svg
-        transform: scale(1.5)
+        transform: scale(1.50)
         opacity: 1
 
   .fp-remaining
@@ -240,10 +240,15 @@
     svg
       pointer-events: auto
       &:active
-        transform: scale(.9)
+        transform: scale(0.90)
   .fp-forward
     left: auto
     right: 0;
+    svg
+      margin-left: 0
+  .fp-rewind
+    svg
+      margin-right: 0
   &.is-mouseover.is-ready
     .fp-forward, .fp-rewind
       display: block
@@ -368,7 +373,7 @@
       transition: transform 0.4s
       transform-origin: bottom
       user-select: none
-      transform: scale(1.1)
+      transform: scale(1.10)
       &:hover
         transform: scaleY(1.35)
         transition: transform 0.2s
@@ -410,7 +415,7 @@
       bottom: 3.2em
     .fp-bar-slider
       em
-        transform: scaleY(0.6)
+        transform: scaleY(0.60)
         transform-origin: center
         &:hover
           transform: scaleY(0.75)
@@ -520,7 +525,7 @@
     z-index: 2
     font-size: 90%
     transition: opacity .2s, transform .2s, height .2s
-    transform: scale(.95)
+    transform: scale(0.95)
     bottom: -100%
     height: 0
     opacity: 0 !important
@@ -541,7 +546,7 @@
       outline: none
     
     &.fp-active
-      transform: scale(1)
+      transform: scale(1.00)
       height: auto
       bottom: 3.2em
       opacity: 1 !important
@@ -692,13 +697,13 @@
 // svg replacement using fp-preload
 @keyframes waiting
   0%
-    transform: scale(1)
+    transform: scale(1.00)
 
   20%
-    transform: scale(1, 2)
+    transform: scale(1.00, 2.00)
 
   40%
-    transform: scale(1)
+    transform: scale(1.00)
 
 .fp-preload
   transition: opacity .3s .1s
